fix overlap issue

--- a/components/home/get-involved/get-involved.scss
+++ b/components/home/get-involved/get-involved.scss
@@ -33,7 +33,7 @@
     @media (min-width: $lg) {
       margin-bottom: 0;
 
-      grid-column: 3 / 6;
+      grid-column: 4 / 5;
     }
   }
 
